# geoplus_geometry_extension

./: LICENSE.txt  README.md  setup.cfg
examples/: geoplus_example.py
src/geoplus/: __init__.py  polydata_utils.py
src/geoplus/3d_planar_surface/: planar_surface_addons.py  polydata_utils.py
src/geoplus/planar_surface_3d/: __init__.py  planar_polydata_addons.py  planar_surface_addons.py  planar_surface_numpy_array_addons.py  planar_surface_visibility_check.py  polydata_utils.py  polygon_utils.py
src/geoplus/utils/: __init__.py  utils_2d_projection.py  utils_adjustements_surface_with_holes.py  utils_common_methods.py  utils_pyvista_polydata.py  utils_surface_corners.py
tests/: test_utils_2d_projections.py  test_utils_adjustments_surface_with_wholes.py  tets_utils_pyvista_polydata.py
tests/3d_planar_surface/: planar_surface_numpy_array_addons_test.py  test_planar_surface_visibility_check.py
tests/utils/: test_adjustments_surface_with_holes.py  test_utils_2d_projection.py  test_utils_common.py  test_utils_surface_corner.py
