[metadata]
name = geoplus
version = 0.1
description = A package with functions to adjust geometries, such as computing their local 2d coordinates. Uses nympy array, pyvista Polydata and shapely Polygons.
author = Elie MEDIONI
author_email = elie.medioniwii@gmail.com
url = todo
license = MIT

[options]
packages = find:
exclude =
    tests*
install_requires =
    numpy
    pyvista
    shapely

[options.extras_require]
dev =
    pytest

[options.packages.find]
where = src
exclude =
    tests*
    examples*


[tool:pytest]
pythonpath = .

[coverage:run]
branch = True